<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_name">Q WebView</string>
    <string name="activity_label">Gecko WebView</string>
    <string name="location_hint">Enter URL or search keywords.</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="clear_field">Clear</string>
    <string name="request_storage">Allow access to device storage for "%1$s"?</string>
    <string name="request_geolocation">Share location with "%1$s"?</string>
    <string name="request_notification">Allow notifications for "%1$s"?</string>
    <string name="request_video">Share video with "%1$s"</string>
    <string name="request_audio">Share audio with "%1$s"</string>
    <string name="request_media">Share video and audio with "%1$s"</string>
    <string name="request_xr">Share WebXR displays with "%1$s"?</string>
    <string name="request_media_key_system_access">Allow system media key access for "%1$s"?</string>
    <string name="media_back_camera">Back camera</string>
    <string name="media_front_camera">Front camera</string>
    <string name="media_microphone">Microphone</string>
    <string name="media_other">Unknown source</string>

    <string name="crash_native">Native</string>
    <string name="crash_java">Java</string>
    <string name="crash_content_native">Content (Native)</string>
    <string name="tracking_protection">Tracking Protection</string>
    <string name="tracking_protection_ex">Disable TP</string>
    <string name="tracking_protection_ex2">Reenable TP</string>
    <string name="private_browsing">Private Browsing</string>
    <string name="qslide_mode">Q slide mode</string>
    <string name="install_addon">Q slide mode</string>
    <string name="install">Q slide mode</string>
    <string name="install_addon_hint">Q slide mode</string>

    <string name="crashed_title">GeckoView Example Crashed</string>
    <string name="crashed_text">Tap to report to Mozilla.</string>
    <string name="crashed_ignore">Ignore</string>
    <string name="device_sharing_microphone">Microphone is on</string>
    <string name="device_sharing_camera">Camera is on</string>
    <string name="device_sharing_camera_and_mic">Camera and microphone are on</string>
    <string name="new_tab">New tab</string>
    <string name="close_tab">Close tab</string>
    <string name="desktop_mode">Desktop site</string>
    <string name="slow_script">A script on this page is causing your web browser to run slowly</string>
    <string name="wait">Wait</string>
    <string name="stop">Stop</string>
    <string name="urlname">Duck Duck Go</string>
    <string name="initurl">https://duckduckgo.com</string>

    <string name="notsupport_qslide">This app is only support LG smartphone due to Qslide feature, OR if your phone Android 10, Qslide removed and replaced popup window feature</string>
    <string name="copy_contextmenu">Copy link</string>
    <string name="new_tab_contextmenu">Open link in new tab</string>
    <string name="cancel">@android:string/cancel</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="twitter">twitter</string>
    <string name="open_new_tab">new tab opened</string>
bhj     </resources>
