<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:title="@string/new_tab" android:id="@+id/action_new_tab"/>
    <item android:title="@string/close_tab" android:id="@+id/action_close_tab"/>
    <item android:title="@string/forward" android:id="@+id/action_forward"/>
    <item android:title="@string/reload" android:id="@+id/action_reload"/>
<!--    <item android:title="@string/tracking_protection" android:id="@+id/action_tp" app:showAsAction="never" />-->
<!--    <item android:title="@string/tracking_protection_ex" android:id="@+id/action_tpe" app:showAsAction="never" />-->
    <item android:title="@string/desktop_mode" android:id="@+id/desktop_mode"
        app:showAsAction="never" />
    <item android:title="@string/private_browsing" android:id="@+id/action_pb" app:showAsAction="ifRoom"/>
    <item android:title="@string/qslide_mode" android:id="@+id/qslide_mode"></item>

</menu>